--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
+strict-store-pkg-content-check=false
 always-auth=true
 //npm.greensock.com/:_authToken=f0da602e-eaa7-4727-a847-e4ccc4609be7
 @gsap:registry=https://npm.greensock.com
