Replaced mp4 videos with webm

--- a/src/app/Projects/projects.json
+++ b/src/app/Projects/projects.json
@@ -30,7 +30,7 @@
       "PostgreSQL"
     ],
     "video": true,
-    "videoSrc": "/videos/negi-neko.mp4",
+    "videoSrc": "/videos/negi-neko.webm",
     "imageSrc": "",
     "link": ""
   },
@@ -47,7 +47,7 @@
       "PostgreSQL"
     ],
     "video": true,
-    "videoSrc": "/videos/moxie-preview.mp4",
+    "videoSrc": "/videos/moxie-preview.webm",
     "imageSrc": "",
     "link": ""
   },
