--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 strict-store-pkg-content-check=false
 always-auth=true
-//npm.greensock.com/:_authToken=process.env.GSAP_TOKEN
+//npm.greensock.com/:_authToken=bbc5d85f-0158-46c5-ae23-971589950b49
 @gsap:registry=https://npm.greensock.com
