--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "gsap": "npm:@gsap/shockingly@^3.12.7",
-    "next": "15.1.6",
+    "next": "^15.5.2",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
